<resources>
    <string name="app_name">TallerCompras</string>
    <string name="aplicacion_Compra">Aplicacion de Compras</string>
    <string name="noDeVenta">Digite la cantidad a comprar</string>
    <string name="material">Material</string>
    <string name="dije">Dije</string>
    <string name="tipo">Tipo</string>
    <string name="moneda">Moneda</string>
    <string name="cuero">Cuero</string>
    <string name="cuerda">Cuerda</string>
    <string name="martillo">Martillo</string>
    <string name="ancla">Ancla</string>
    <string name="plata">Plata</string>
    <string name="niquel">Niquel</string>
    <string name="oro">Oro</string>
    <string name="oroR">Oro Rosado</string>
    <string name="peso">Peso</string>
    <string name="valor1">Pesos</string>
    <string name="valor2">Dolares</string>
    <string name="dolar">Dolar</string>
    <string name="error_1">Digite la cantidad a comprar</string>
    <string name="mensaje">El total de la compra es</string>
    <string name="compra">Comprar</string>
    <string-array name="material">
        <item>@string/cuero</item>
        <item>@string/cuerda</item>
    </string-array>
    <string-array name="dije">
        <item>@string/martillo</item>
        <item>@string/ancla</item>
    </string-array>
    <string-array name="tipo">
        <item>@string/oro</item>
        <item>@string/oroR</item>
        <item>@string/plata</item>
        <item>@string/niquel</item>
    </string-array>
</resources>
