<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.tallercompras.Principal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/aplicacion_Compra"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:id="@+id/textView2"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/txtCantidad"
                android:hint="@string/noDeVenta"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:id="@+id/textView3"
                android:textSize="18sp"
                android:text="@string/material" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:id="@+id/cmbMaterial" />

            <TextView
                android:text="@string/dije"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:id="@+id/textView4"
                android:textSize="18sp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/cmbDije" />

            <TextView
                android:text="@string/tipo"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:id="@+id/textView5"
                android:textSize="18sp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:id="@+id/cmbTipo" />

            <TextView
                android:text="@string/moneda"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:id="@+id/textView7"
                android:textSize="18sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:text="@string/peso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/r1"
                    android:layout_weight="1"
                    android:checked="true" />

                <RadioButton
                    android:text="@string/dolar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/r2"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/compra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnCompra"
                    android:layout_weight="0.75"
                    android:onClick="calculo" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lblMensaje"
                    android:textSize="18sp" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
